src/webapp/demos/uiOptions/css/uiOptions.css
/* Define font families */
@font-face {
  font-family: Lato;
  src: url(../fonts/Lato-Regular.ttf);
}
@font-face {
  font-family: LatoLight;
  src: url(../fonts/Lato-Light.ttf);
}
@font-face {
  font-family: LatoLightItalic;
  src: url(../fonts/Lato-LightItalic.ttf);
}
@font-face {
  font-family: LatoBlack;
  src: url(../fonts/Lato-Black.ttf);
}
@font-face {
  font-family: LatoRegular;
  src: url(../fonts/Lato-Regular.ttf);
}
@font-face {
  font-family: LoveYaLikeASister;
  src: url(../fonts/LoveYaLikeASister.ttf);
}


body {
    font-family: LatoLight, Helvetica, Tahoma, Verdana, sans-serif;
}
img {
    box-shadow: rgba(0,0,0,0.4) 0px 0px 5px 1px;
    margin-bottom: 10px;
}
.content h2 {
    margin-bottom: 0.5em;
    font-weight: normal;
    font-size: 1.6em;
    line-height: 100%;
}
.header,
.instructions {
    font-size: 1.3em;
}
.header h1 {
    font-family: LoveYaLikeASister, "Courier New, Courier", monospace;
    font-size: 3em;
    line-height: 1em;
    margin-bottom: 20px;
}
.header .tagline {
    font-family: LatoLightItalic, Helvetica, Tahoma, Verdana, sans-serif;
    font-size: 1.3em;
    line-height: 130%;
    font-style: italic;
}
.header .disp-pref {
    font-weight: bold;
}
.instructions h2 {
    font-family: LatoBlack, Helvetica, Tahoma, Verdana, sans-serif;
    font-weight: normal;
    margin-bottom: 0.5em;
}
.instructions ol {
    margin-left: 1.5em;
    margin-top: 0px;
}
.instructions li {
    font-size: 1.25em;
    margin-bottom: 1em;
}
.instructions .instruction-comment {
    font-size: 0.8em;
}
.disp-opts-buttons {
    margin-top: 40px;
}
.disp-opts-button-container {
    padding: 10px;
    margin-top: 15px;
    padding-right: 25px;
}
.disp-opts-button {
    font-family: "Myriad Pro", Helvetica, Tahoma, Verdana, sans-serif;
    font-weight: bold;
    text-transform: uppercase;
    text-align: left;
    padding-right: 25px;
    border-style: none none;
    padding-left: 0;
}
.disp-opts-button a {
    text-decoration: none;
}
.disp-opts-button .preview {
    font-size: 0.8em;
    font-weight: normal;
}
.content {
    margin-top: 1em;
    padding: 10px 0;
    border-top: dashed 1px #426088;
}
.feedback-form input,
.feedback-form textarea {
    width: 95%;
    padding: 5px;
    margin: 5px 0 10px 0;
}
.feedback-form textarea {
    height: 8em;
}
.feedback-form label {
    font-family: LatoRegular, Helvetica, Tahoma, Verdana, sans-serif;
}
.feedback-form .optional {
    font-style: italic;
}

/* Overriding some of the default Fat Panel UI Options styling */
.fl-uiOptions-fatPanel .fl-toggleButton {
    font-family: "Myriad Pro", Helvetica, Tahoma, Verdana, sans-serif;
    border-radius: 0;
    margin-right: 80px;
}

/* Scoped colours for theme swapping */
/*
    Font color: #3E606F
    Button blue: #0071BC
 */
.uio-demo-theme {
    color: #3E606F;
    background-image: url("../images/background_texture.png");
    background-position: left top;
    background-repeat: repeat;
}
.uio-demo-theme a {
    color: #3E606F;
}
.uio-demo-theme .disp-opts-button-container {
    background-color: #0071BC;
    background-image: url("../images/arrow_right.png");
    background-repeat: no-repeat;
    background-position: right; 
}
.uio-demo-theme .disp-opts-button {
    color: white;
    background-color: #0071BC;
}
.uio-demo-theme .disp-opts-button a {
    color: white;
}
.uio-demo-theme .feedback-form input,
.uio-demo-theme .feedback-form textarea {
    color: grey;
}

/* Overriding some of the default Fat Panel UI Options colours */
.uio-demo-theme .fl-uiOptions-fatPanel .fl-panelBar {
    background-color: #0071BC;
}
.uio-demo-theme .fl-uiOptions-fatPanel .fl-toggleButton {
    background-color: #0071BC;
    color: white;
}

